# pytorch-nix

./: .gitignore  docker-compose.yml  flake.nix  jupyter-lab-nix.sh  pyproject.toml  test.ipynb
.devcontainer/: Dockerfile  devcontainer.json  postCreate.sh
.jupyter/: jupyter_notebook_config.py
nix-scripts/: flake.nix  nix-develop.sh
nix-store/: README.md
project/: jupyter-lab-nix.sh  pyproject.toml
project/notebooks/: 2025-05-03-autoencoder.ipynb  test.ipynb
project/source/notebooks/: test.ipynb
source/: jupyter-lab-nix.sh  pyproject.toml
source/.ipynb_checkpoints/: test-checkpoint.ipynb
