[project]
name = "jupyter-nix"
version = "0.1.0"
description = ""
authors = [
    {name = "Daisuke Sakurai",email = "d.sakurai0@gmail.com"}
]
readme = "README.md"
requires-python = "^3.12"
dependencies = [
    "jupyterlab (>=4.4.2,<5.0.0)",
    "notebook (>=7.4.2,<8.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "torch (>=2.7.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
