[project]
name = "nix-vscode"
version = "0.1.0"
description = ""
authors = [
    {name = "Daisuke Sakurai",email = "d.sakurai0@gmail.com"}
]
readme = "README.md"
requires-python = "^3.12"
dependencies = [
    "torch (>=2.7.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "torch_source_cuda128"
url = "https://download.pytorch.org/whl/cu128"
priority = "explicit"


[tool.poetry.dependencies]
torch = {source = "torch_source_cuda128"}
