[project]
name = "nix-vscode"
version = "0.1.0"
description = ""
authors = [
    {name = "Daisuke Sakurai",email = "d.sakurai0@gmail.com"}
]
readme = "README.md"
requires-python = "^3.12"
dependencies = [
    "torch (>=2.7.0,<3.0.0)",
    "numpy (<2.0)",
    "jupyterlab (>=4.4.2,<5.0.0)",
    "notebook (>=7.4.2,<8.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "plotly (>=6.1.1,<7.0.0)",
    "kaleido (==0.2.1)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "torch_source_cuda126"
url = "https://download.pytorch.org/whl/cu126"
priority = "explicit"

[tool.poetry.dependencies]
torch = {source = "torch_source_cuda126"}
